--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,7 @@ jobs:
             - name: Run the build script
               run: bash build_x86.sh
 
-            - name: Tree all the files!
-              run: tree -a
+            - uses: actions/upload-artifact@v3
+              with:
+                name: images
+                path: images/
